# m3di4

./: .gitignore  README.md  analize.sh  config.cnf  main.py  pylintrc  pyproject.toml  requirements.txt  setup.cfg  translate.sh
doc/: tables.md
media/db/: Media32.db  table_names.json
media/doc/: Media4_ER.dia  Media4_MR.dia  design_choices.md  index.md  tables.md  todo.md
media/i18n/: media4.po  supported_languages.json
src/: info.py  media3.py  media4.py  uteis.py  utils.py
src/controller/: __init__.py  controller.py  info.py  insertar.py  sair.py
src/db/: db.py  idb.py  sqlite.py
src/dtos/: Almacen.py  Arquivo.py  ArquivoAdxunto.py  ArquivoAdxuntoDTO.py  ArquivoAudio.py  ArquivoAudioDTO.py  ArquivoDTO.py  ArquivoSubtitulo.py  ArquivoSubtituloDTO.py  ArquivoVideo.py  ArquivoVideoDTO.py  Codec.py  Compartido.py  CompartirLugar.py  Lingua.py  LinguaDTO.py  Media.py  MediaAgrupacion.py  MediaAgrupacionDTO.py  MediaDTO.py  MediaFasciculo.py  MediaFasciculoDTO.py  MediaNomes.py  MediaNomesDTO.py  MediaNomesLinguas.py  MediaNomesLinguasDTO.py  MediaNomesPaises.py  MediaNomesPaisesDTO.py  MediaSituacion.py  MediaSituacionDTO.py  MediaTipo.py  MediaTipoDTO.py  MediaWeb.py  MediaWebDTO.py  NomeCarpeta.py  NomeCarpetaDTO.py  Pais.py  PaisDTO.py  Secuencia.py  Web.py  (+1 more)
src/entity/: Code.py  Codec.py  CodecType.py  Country.py  Extension.py  File.py  FileAttachment.py  FileAudio.py  FileShareSite.py  FileStream.py  FileSubtitle.py  FileVideo.py  FolderName.py  Language.py  LanguageCode.py  LanguageName.py  LanguageNameLanguage.py  Media.py  MediaGroup.py  MediaIssue.py  MediaName.py  MediaNameCountry.py  MediaNameLanguage.py  MediaPoster.py  MediaStatus.py  MediaType.py  MediaWeb.py  Sequence.py  ShareSite.py  ShareSiteSubs.py  ShareSiteType.py  Shared.py  Warehouse.py  WarehouseType.py  Web.py  __init__.py
src/enum/: __init__.py  metadata_sources_enum.py  pagination.py  ui.py
src/exception/: __init__.py  exception.py
src/model/: __init__.py  db.py  idb.py  imodel.py  model.py  sqlite.py
src/operations/: info.py  insertar.py  sair.py
src/service/: __init__.py  file_info_service.py  info.py  member_count_service.py  metadata_service.py  telegram_service.py  tmdb_service.py
src/utils/: Config.py  __init__.py  app_utils.py  communication_objects.py  config_utils.py  file.py  file_utils.py  (+4 more)
tests/: uteis_test.py  utils_test.py
(+213 files in other folders)
