# -*- coding: utf-8 -*-
# ------------------------------------------------------------------------------
#+ Autor:  	Ran#
#+ Creado: 	2026/03/17 00:00:00.000000
#+ Editado:	2026/03/17 00:00:00.000000
# ------------------------------------------------------------------------------

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "m3di4"
version = "0.1.0"
description = "Media management application"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{ name = "Ran#", email = "ran.hash@proton.me" }]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
]
dependencies = [
    "aiohttp~=3.13.3",
    "blake3~=1.0.8",
    "configobj~=5.0.9",
    "ffmpeg==1.4",
    "python-dateutil~=2.9.0",
    "ffmpeg-python==0.2.0",
    "uteis~=0.1.2",
    "validators~=0.35.0",
    "customtkinter~=5.2.2",
    "pymediainfo>=7.0.1",
]

[project.urls]
Homepage = "https://www.github.com/Ran-n/m3di4"
Issues = "https://www.github.com/Ran-n/m3di4/issues"

[project.scripts]
m3di4 = "src.media4:main"

# ------------------------------------------------------------------------------

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ------------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]

# ------------------------------------------------------------------------------

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # import sorting
    "B",   # flake8-bugbear
    "UP",  # pyupgrade (modern syntax)
    "SIM", # simplifications
]
ignore = ["E265"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# ------------------------------------------------------------------------------

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = ["pytest>=8.0.0", "ruff>=0.15.5"]
